внесение изменений по комментариям в github

--- a/todo_mvc/styles.css
+++ b/todo_mvc/styles.css
@@ -38,7 +38,7 @@ h1 {
     width: 85%;
 }
 
-.search-button {
+.add-button {
     display: flex;
     border: 1px solid #CDCDCD;
     font-family: inherit;
