создание проекта фильмопоиск на react

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -14,7 +14,7 @@ body {
     flex: 1;
     margin-left: 280px; /* чтобы не заезжать под навбар */
     padding: 40px;
-    max-width: 1200px;
+    //max-width: 1200px;
     width: 100%;
 }
 
