внесены собственные изменения

--- a/filmopoisk_js/style.css
+++ b/filmopoisk_js/style.css
@@ -51,6 +51,15 @@ a:hover {
     display: flex;
 }
 
+.wrapper-sidebar {
+    padding-left: 15px;
+    color: #8e8e8e;
+    display: flex;
+    flex-direction: column;
+    max-width: 180px;
+    min-width: 180px;
+}
+
 .wrapper {
     display: flex;
     flex-direction: row;
