внесены правки по комментариям

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -12,9 +12,7 @@ body {
 
 .route-container {
     flex: 1;
-    margin-left: 280px; /* чтобы не заезжать под навбар */
-    padding: 40px;
-    //max-width: 1200px;
+    margin-left: 290px;
     width: 100%;
 }
 
