--- a/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
@@ -6,13 +6,14 @@
   overflow-x: visible;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .container {
   display: flex;
   width: 100%;
   max-width: 1400px;
-  padding-bottom: 80px;
+  //padding-bottom: 80px;
 }
 
 .wrapper {
