--- a/portfolio/src/components/Navbar/Navbar.module.scss
+++ b/portfolio/src/components/Navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 210px;
     background-color: #2c3e50;
     color: white;
     padding: 20px;
@@ -21,20 +21,20 @@
 }
 
 .navbar a:hover {
-    color: #1abc9c;
+    color: #a8adb0;
 }
 
-@media (max-width: 768px) {
-    .navbar {
-        position: relative;
-        width: 100%;
-        height: auto;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    .navbar a {
-        margin: 0;
-        padding: 10px;
-    }
-}
+//@media (max-width: 250px) {
+//    .navbar {
+//        position: relative;
+//        width: 100%;
+//        height: auto;
+//        flex-direction: row;
+//        justify-content: space-around;
+//    }
+//
+//    .navbar a {
+//        margin: 0;
+//        padding: 10px;
+//    }
+//}
