--- a/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
@@ -1,27 +1,42 @@
 .bodyContainer {
+  display: flex;
+  flex: 1;
+  //width: 100%;
+  //min-height: 100vh;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   background-color: #000;
   color: #fff;
-  overflow-x: visible;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  //overflow-x: hidden;
+  //margin: 0;
 }
 
 .container {
   display: flex;
+  flex: 1;
   width: 100%;
-  max-width: 1400px;
-  //padding-bottom: 80px;
+  max-width: none;
+  padding-top: 100px;
+  padding-bottom: 80px;
 }
 
 .wrapper {
   display: flex;
   flex: 1;
   flex-direction: row;
-  justify-content: flex-start;
-  overflow-y: auto;
+  justify-content: space-evenly;
+  //justify-content: center;
   gap: 20px;
-  padding: 25px 15px;
+  padding: 5px 55px 5px 55px;
 }
+
+//
+//.wrapper {
+//    display: flex;
+//    flex: 1;
+//    flex-direction: row;
+//    justify-content: space-evenly;
+//    gap: 20px;
+//    padding: 5px 55px 5px 55px;
+//}
