--- a/portfolio/src/pages/FilmopoiskReact/components/DropdownMovieList/DropdownMovieList.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/components/DropdownMovieList/DropdownMovieList.module.scss
@@ -45,6 +45,7 @@
 }
 
 .searchInput {
+  display: flex;
   width: 100%;
   margin: 0;
   padding: 8px 4px 8px 16px;
@@ -53,10 +54,11 @@
   border-radius: 10px;
   color: white;
   background: transparent;
-  font-family: "Roboto", serif;
+  font-family: inherit;
   font-size: 18px;
   flex-grow: 1;
 }
+
 
 .btnSearch {
   opacity: 0.4;
