--- a/portfolio/src/pages/FilmopoiskReact/components/Header/Header.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/components/Header/Header.module.scss
@@ -1,46 +1,45 @@
 .header {
-  display: flex;
-  flex: 1;
-  max-width: 100%;
-  height: 70px;
-  align-items: center;
-  background-color: #141414;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, .3);
-  z-index: 1000;
-  position: sticky;
-  top: 0;
-  box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    font-family: inherit;
+    background-color: #141414;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
+    position: fixed;
 }
 
 .searchContainer {
-  display: flex;
-  gap: 80px;
-  align-items: center;
-  justify-content: space-between;
-  height: 72px;
-  width: inherit;
-  padding: 0 36px 0 40px;
+    display: grid;
+    grid-template-columns: 200px 1fr 1fr;
+    grid-gap: 80px;
+    align-items: center;
+    justify-content: space-between;
+    height: 72px;
+    width: inherit;
 }
 
 .navBrand {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-size: 25px;
-  font-weight: 700;
-  cursor: pointer;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .formSearch {
+  height: 30px;
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
   flex-flow: row nowrap;
   background-color: hsla(0, 0%, 100%, .15);
   border-radius: 10px;
   transition: all 0.9ms ease-in-out;
-  max-width: 100%;
+  max-width: 600px;
   position: relative;
 }
