--- a/portfolio/src/pages/FilmopoiskReact/components/MovieCard/MovieMainInfo/MovieMainInfo.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/components/MovieCard/MovieMainInfo/MovieMainInfo.module.scss
@@ -2,13 +2,12 @@
   display: flex;
   flex-direction: row;
   gap: 40px;
-  width: 1010px;
+  width: 100%;
 }
 
 .poster {
   max-width: 450px;
   min-width: 200px;
-  width: 350px;
 }
 
 .addToFavorites {
@@ -34,6 +33,8 @@
   padding-left: 5px;
   padding-top: 2px;
   display: flex;
+  contain: unset;
+  visibility: inherit;
 }
 
 img {
