--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -1,13 +1,22 @@
 body {
-  margin: 0;
   background-color: #f5f6fa;
   font-family: "Segoe UI", Roboto, Arial, sans-serif;
   color: #333;
 }
 
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   display: flex;
   min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  padding: 0;
   margin: 0;
   overflow: hidden;
 }
