--- a/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
@@ -1,15 +1,11 @@
 .bodyContainer {
   display: flex;
   flex: 1;
-  //width: 100%;
-  //min-height: 100vh;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   background-color: #000;
   color: #fff;
-  //overflow-x: hidden;
-  //margin: 0;
 }
 
 .container {
@@ -26,17 +22,32 @@
   flex: 1;
   flex-direction: row;
   justify-content: space-evenly;
-  //justify-content: center;
   gap: 20px;
   padding: 5px 55px 5px 55px;
 }
 
-//
-//.wrapper {
-//    display: flex;
-//    flex: 1;
-//    flex-direction: row;
-//    justify-content: space-evenly;
-//    gap: 20px;
-//    padding: 5px 55px 5px 55px;
-//}
+.preloaderWrapper {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  z-index: 9999999;
+}
+
+.preloader {
+  width: 70px;
+  height: 70px;
+  border: 8px solid rgba(248, 250, 253, 0.7);
+  border-radius: 70%;
+  border-left-color: rgba(167, 171, 176, 0.9);
+  animation: loader 1.3s linear infinite;
+}
+
+@keyframes loader {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
