--- a/portfolio/src/pages/FilmopoiskReact/components/MovieCard/VideoPlayer/VideoPlayer.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/components/MovieCard/VideoPlayer/VideoPlayer.module.scss
@@ -18,3 +18,49 @@
   border: none;
   border-radius: 3px;
 }
+
+.similarMoviesContainer {
+  margin-top: 70px;
+}
+
+.similarMovieTitle {
+  margin-bottom: 28px;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.similarMovieItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 130px;
+  cursor: pointer;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.similarMoviePoster {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.similarMovieName {
+  padding: 8px;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
+}
+
+.similarMovieList {
+  display: flex;
+  gap: 28px;
+  flex-wrap: wrap;
+  margin: 20px 0;
+  padding: 0;
+}
+
+.similarMoviePoster:hover {
+  scale: 1.05;
+}
