--- a/filmopoisk_js/src/components/MovieCard/MovieCard.css
+++ b/filmopoisk_js/src/components/MovieCard/MovieCard.css
@@ -213,7 +213,8 @@ select {
     margin: 0;
     padding-left: 5px;
     padding-top: 2px;
-    display: flex;
+    contain: unset;
+    visibility: inherit;
 }
 
 .favorite-movie-item {
@@ -334,6 +335,7 @@ select {
     width: 100%;
 }
 
-ion-icon {
-    contain: unset;
-}
+/*ion-icon {*/
+/*    contain: unset;*/
+/*    visibility: inherit;*/
+/*}*/
