--- a/filmopoisk_js/src/components/SideBar/SideBar.css
+++ b/filmopoisk_js/src/components/SideBar/SideBar.css
@@ -48,7 +48,8 @@
     flex-wrap: wrap;
     gap: 15px;
     font-family: inherit;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 900;
     text-transform: uppercase;
     border-bottom: 1px solid rgba(171, 169, 169, 0.3);
     padding-bottom: 30px;
