--- a/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
+++ b/portfolio/src/pages/FilmopoiskReact/FilmopoiskReact.module.scss
@@ -23,7 +23,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   gap: 20px;
-  padding: 5px 55px 5px 55px;
+  padding: 5px 50px;
 }
 
 .preloaderWrapper {
