--- a/portfolio/src/pages/LineChart/LineChartReact.module.scss
+++ b/portfolio/src/pages/LineChart/LineChartReact.module.scss
@@ -5,19 +5,22 @@
 .variationsSelector {
   width: 275px;
   padding-left: 30px;
+  margin-right: 15px;
+}
+
+.periodsSelector {
+  width: 80px;
 }
 
 .chartContainer {
-  display: flex;
-  justify-items: center;
-  flex: 1;
   width: 100%;
-  height: 70vh;
+  height: 600px;
   max-width: 1100px;
   padding: 30px;
   font-size: 14px;
 }
 
 .lineChart {
-  min-width: 100%;
+  width: 100%;
+  height: 100%;
 }
