--- a/portfolio/src/pages/LineChart/LineChartReact.module.scss
+++ b/portfolio/src/pages/LineChart/LineChartReact.module.scss
@@ -2,21 +2,44 @@
   padding: 30px;
 }
 
+.headerActions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .variationsSelector {
   width: 275px;
   padding-left: 30px;
   margin-right: 15px;
+  cursor: pointer;
 }
 
 .periodsSelector {
   width: 80px;
 }
 
+.lineTypeSelector {
+  width: 100px;
+}
+
+.downloadBtn {
+  border: 1px solid #d9d9d9;
+  background: #ffffff;
+  width: 33px;
+  height: 33px;
+  border-radius: 4px;
+  font-size: 17px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+
 .chartContainer {
   width: 100%;
   height: 600px;
-  max-width: 1100px;
-  padding: 30px;
+  max-width: 1300px;
+  min-width: 671px;
   font-size: 14px;
 }
 
