--- a/portfolio/src/pages/LineChart/LineChartReact.module.scss
+++ b/portfolio/src/pages/LineChart/LineChartReact.module.scss
@@ -1,5 +1,10 @@
 .mainContainer {
   padding: 30px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1300px;
+  min-width: 671px;
+  box-sizing: border-box;
 }
 
 .headerActions {
@@ -27,8 +32,8 @@
 .downloadBtn {
   border: 1px solid #d9d9d9;
   background: #ffffff;
-  width: 33px;
-  height: 33px;
+  width: 32px;
+  height: 32px;
   border-radius: 4px;
   font-size: 17px;
   cursor: pointer;
@@ -38,12 +43,27 @@
 .chartContainer {
   width: 100%;
   height: 600px;
-  max-width: 1300px;
-  min-width: 671px;
   font-size: 14px;
+}
+.rightGroupActions {
+  display: flex;
+  align-items: center;
+}
+
+.themeSelector {
+  margin-left: 15px;
+  width: 130px;
 }
 
 .lineChart {
   width: 100%;
   height: 100%;
+}
+
+.themeOption {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+  align-items: center;
+
 }
