--- a/portfolio/src/pages/LineChart/LineChartReact.module.scss
+++ b/portfolio/src/pages/LineChart/LineChartReact.module.scss
@@ -65,5 +65,36 @@
   flex-direction: row;
   gap: 4px;
   align-items: center;
+}
 
+.zoomIn {
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  font-size: 17px;
+  cursor: pointer;
+  margin-left: 15px;
+  border: 1px solid #d9d9d9;
+  background: #ffffff;
+}
+
+.zoomOut {
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  font-size: 17px;
+  cursor: pointer;
+  border: 1px solid #d9d9d9;
+  background: #ffffff;
+}
+
+.refreshBtn {
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  font-size: 17px;
+  cursor: pointer;
+  margin-left: 15px;
+  background: none;
+  border: none;
 }
